fixed reset timings

--- a/fileSettings.html
+++ b/fileSettings.html
@@ -80,7 +80,7 @@
     $(address(2, 1)).append($('<input type="checkbox" id="waitForOther">'));
     $(address(3, 1)).append($('<input type="checkbox" id="saveToFile">'));
     $(address(4, 1)).append($('<input type="checkbox" id="useFile">'));
-    $(address(3, 2)).append($('<select id ="resetFile">').html('<option value="off">Off</option><option value="inteval">Interval</option><option value="time">Time of day</option>'));
+    $(address(3, 2)).append($('<select id ="resetFile">').html('<option value="off">Off</option><option value="interval">Interval</option><option value="time">Time of day</option>'));
     $(address(4, 2)).append($('<input type="time" id="fileResetValue">'));
 
     var cursor = 4;
