--- a/fileUpload.html
+++ b/fileUpload.html
@@ -48,7 +48,7 @@
     $(address(2, 8)).append($('<input type="button" style="width: 50%" value="Cancel" onclick="javascript:goDebug()">'));
 
     $(address(2, 10)).append($('<input type="button" style="width: 50%" value="File settings" onclick="javascript:goFileSettings()">'));
-    $(address(2, 10)).append($('<input type="button" style="width: 50%" value="Download logs" onclick="javascript:goDownload()">'));
+    $(address(2, 10)).append($('<input type="button" style="width: 50%" value="Logfiles" onclick="javascript:goDownload()">'));
 
 
     var socket = io();
