--- a/fileSettings.html
+++ b/fileSettings.html
@@ -30,17 +30,17 @@
   <script src="/config.js"></script>
   <script type="text/javascript">
     if (screen.width>1000){
-      var columnWidths = [12, 12, 28, 12, 12, 12, 12];
+      var columnWidths = [12, 12, 28, 12, 12, 12, 12, 12];
     }
     else{
-      var columnWidths = [14, 15, 25, 12, 18, 14, 16];
+      var columnWidths = [14, 15, 25, 12, 18, 18, 14, 16];
       $('#content').css('width', columnWidths.reduce(function(acc, val) { return acc + val; }) + 'vw');
     }
     
     var socket = io();
     var configList;
 
-    const numColumns = 7;
+    const numColumns = 8;
     var numRows = 0;
     const tableNumbers = 5;
     const tableLetters = 2;
@@ -100,6 +100,11 @@
 
     $(address(4, 6)).append($('<b>').html('Tolerance(%)'));
 
+
+    for (let i = 0; i<5; i++){
+      $(address(i, 7)).append($('<hr>'));
+    }
+
     $(address(5, 1)).append($('<input type="button" value="Cancel" onclick="javascript:goDebug()">'));
     $(address(5, 0)).append($('<input type="button" value="Save" onclick="javascript:setSettings()">'));
     $(address(6, 0)).append($('<input type="button" value="Save config" onclick="javascript:saveConfig()">'));
@@ -107,18 +112,18 @@
     $(address(6, 2)).append($('<input type="button" value="Load default" onclick="javascript:loadDefault()">'));
     $(address(5, 2)).append($('<b>').html('Version: '+config.version));
 
-    var cursor = 8;
+    var cursor = 9;
 
     $(address(0, cursor)).append($('<b>').html('Table'));
     $(address(1, cursor)).append($('<b>').html('Name'));
     $(address(2, cursor)).append($('<b>').html('Formula'));
     $(address(3, cursor)).append($('<b>').html('Numeric'));
     $(address(4, cursor)).append($('<b>').html('Digits/round.'));
-    $(address(5, cursor)).append($('<b>').html('Command'));
-    $(address(6, cursor)).append($('<b>').html('Value'));
+    $(address(5, cursor)).append($('<b>').html('Reset on exe'));
+    $(address(6, cursor)).append($('<b>').html('Command'));
+    $(address(7, cursor)).append($('<b>').html('Value'));
     var commands = [
       'com0',
-      'com1',
       'date',
       '$A',
       '#A1',
@@ -138,6 +143,9 @@
       '-',
       '*',
       '/',
+      '#SC #SCmin #SCmax',
+      '#SN',
+      '#ST'
     ];
     var meanings = [
       'value com0',
@@ -161,13 +169,16 @@
       'substract',
       'multiply',
       'divide',
+      'self-learning calibration',
+      'self-learning number',
+      'self-learning time'
     ];
     cursor++;
     for (let i = 0; i < commands.length; i++){
-      $(address(5, i + cursor)).html(commands[i]);
-      $(address(5, i + cursor)).addClass('small');
-      $(address(6, i + cursor)).html(meanings[i]);
+      $(address(6, i + cursor)).html(commands[i]);
       $(address(6, i + cursor)).addClass('small');
+      $(address(7, i + cursor)).html(meanings[i]);
+      $(address(7, i + cursor)).addClass('small');
     }
     
     for (let i = 0; i < tableLetters; i++){
@@ -177,6 +188,7 @@
         $(address(2, cursor)).append($('<input class="wide" type="text" id="formulatable' + (i*tableNumbers + j) + '">'));
         $(address(3, cursor)).append($('<input type="checkbox" id="numerictable' + (i*tableNumbers + j) +'">'));
         $(address(4, cursor)).append($('<input type="number" id="digitstable' + (i*tableNumbers + j) + '" min="0" step="1">'));
+        $(address(5, cursor)).append($('<input type="checkbox" id="resetOnExetable' + (i*tableNumbers + j) +'">'));
         cursor++;
       }
     }
@@ -203,7 +215,29 @@
     $(address(3, cursor)).append($('<b>').html('Invert'));
     $(address(4, cursor)).append($('<b>').html('Follow'));
     $(address(5, cursor)).append($('<b>').html('Timeout'));
+    $(address(6, cursor)).append($('<b>').html('Logfile'));
+    $(address(7, cursor)).append($('<b>').html('X: 0/1/A1/B5'));
+    var commands = [
+      '&tn',
+      '&toX',
+      '&miX',
+      '&maX',
+      '&spX',
+    ];
+    var meanings = [
+      'total number',
+      'total',
+      'minimum',
+      'maximum',
+      'spread',
+    ];
     cursor++;
+    for (let i = 0; i < commands.length; i++){
+      $(address(6, i + cursor)).html(commands[i]);
+      $(address(6, i + cursor)).addClass('small');
+      $(address(7, i + cursor)).html(meanings[i]);
+      $(address(7, i + cursor)).addClass('small');
+    }
 
     for (let i = 0; i < numInputs; i++){
       $(address(0, cursor)).append($('<b>').html('Input ' + (i + 1)));
@@ -225,6 +259,8 @@
       cursor++;
       address(3, cursor);
     }
+
+
 
     function fillIn(){
       for (let property in config){
