--- a/fileUpload.html
+++ b/fileUpload.html
@@ -74,7 +74,7 @@
     }
 
     function goDownload(){
-      window.location.href = '/download';
+      window.location.href = '/downloadLog';
     }
   </script>
 </body>
