--- a/fileSettings.html
+++ b/fileSettings.html
@@ -8,7 +8,7 @@
       tr { height: 29px; }
       td { position: relative; text-align: center;  border-style: bold; height: 29px;}
       td.right { text-align: right; }
-      td.small { font-size: 15px; }
+      .small { font-size: 15px; }
       input {text-align: center; width: 100%;}
       input[type="submit"]{width: auto;}
       input[type="time"]{font-size: 19px;}
@@ -81,8 +81,8 @@
     $(address(0, 3)).append($('<b>').html('File reset'));
     $(address(1, 3)).append($('<b>').html('Time'));
     $(address(2, 3)).append($('<b>').html('Automatic FTP'));
-    $(address(3, 3)).append($('<b>').html('Address/Folder'));
-    $(address(4, 3)).append($('<b>').html('User:Password'));
+    $(address(3, 3)).append($('<b>').html('Address / Folder'));
+    $(address(4, 3)).append($('<b>').html('User : Password'));
 
     $(address(0, 4)).append($('<select id ="resetFile">').html('<option value="off">Off</option><option value="interval">Interval</option><option value="time">Time of day</option>'));
     $(address(1, 4)).append($('<input type="time" id="fileResetValue">'));
@@ -95,14 +95,19 @@
     }
 
     $(address(0, 6)).append($('<b>').html('Self-learning'));
-    $(address(1, 6)).append($('<select id ="selfLearning">').html('<option value="off">Off</option><option value="com1">Com 0</option><option value="com1">Com 1</option>'));
-    $(address(2, 6)).append($('<b>').html('Number'));
+    $(address(1, 6)).append($('<b>').html('Number'));
+    $(address(2, 6)).append($('<b>').html('Tolerance(%)'));
+    $(address(3, 6)).append($('<b>').html('#SCmin'));
+    $(address(4, 6)).append($('<b>').html('#SCmax'));
 
-    $(address(4, 6)).append($('<b>').html('Tolerance(%)'));
-
+    $(address(0, 7)).append($('<select id ="selfLearning">').html('<option value="off">Off</option><option value="com1">Com 0</option><option value="com1">Com 1</option>'));
+    $(address(1, 7)).append($('<input type="number" id="selfLearningNumber" min="0" step="1">'));
+    $(address(2, 7)).append($('<input type="number" id="selfLearningTolerance" min="0" step="1">'));
+    $(address(3, 7)).append($('<input type="number" id="calibrationMin" min="0" step="1">'));
+    $(address(4, 7)).append($('<input type="number" id="calibrationMax" min="0" step="1">'));
 
     for (let i = 0; i<5; i++){
-      $(address(i, 7)).append($('<hr>'));
+      $(address(i, 8)).append($('<hr>'));
     }
 
     $(address(5, 1)).append($('<input type="button" value="Cancel" onclick="javascript:goDebug()">'));
@@ -112,7 +117,7 @@
     $(address(6, 2)).append($('<input type="button" value="Load default" onclick="javascript:loadDefault()">'));
     $(address(5, 2)).append($('<b>').html('Version: '+config.version));
 
-    var cursor = 9;
+    var cursor = 10;
 
     $(address(0, cursor)).append($('<b>').html('Table'));
     $(address(1, cursor)).append($('<b>').html('Name'));
@@ -120,8 +125,8 @@
     $(address(3, cursor)).append($('<b>').html('Numeric'));
     $(address(4, cursor)).append($('<b>').html('Digits/round.'));
     $(address(5, cursor)).append($('<b>').html('Reset on exe'));
-    $(address(6, cursor)).append($('<b>').html('Command'));
-    $(address(7, cursor)).append($('<b>').html('Value'));
+    $(address(6, cursor)).append($('<b>').html('Command').addClass('small'));
+    $(address(7, cursor)).append($('<b>').html('Value').addClass('small'));
     var commands = [
       'com0',
       'date',
@@ -149,7 +154,6 @@
     ];
     var meanings = [
       'value com0',
-      'value com1',
       'date today',
       'value input-file column A',
       'value table #A1',
@@ -215,8 +219,8 @@
     $(address(3, cursor)).append($('<b>').html('Invert'));
     $(address(4, cursor)).append($('<b>').html('Follow'));
     $(address(5, cursor)).append($('<b>').html('Timeout'));
-    $(address(6, cursor)).append($('<b>').html('Logfile'));
-    $(address(7, cursor)).append($('<b>').html('X: 0/1/A1/B5'));
+    $(address(6, cursor)).append($('<b>').html('Logfile').addClass('small'));
+    $(address(7, cursor)).append($('<b>').html('X: 0/1/A1/B5').addClass('small'));
     var commands = [
       '&tn',
       '&toX',
@@ -400,7 +404,15 @@
         socket.emit('getConfigList');
       }
     }
+    function downloadConfig(index){
+      window.location.href = '/downloadConfig?file='+configList[index];
+      console.log('/downloadConfig?file='+configList[index]);
+    }
+    function uploadConfig(){
+      $('#configLocation').click();
+    }
 
+    
     socket.on('configList', function(list){
       $('#list').remove();
       $(address(6, 1)).append( $('<div id="list">').append('<ul>'));
@@ -413,12 +425,34 @@
       else{
         list.forEach((element, index) => {
           let newItem = $('<li>').append('<span>'+element+'</span>')
+            .append('<input type="button" class="config" value="Download" onclick="javascript:downloadConfig('+index+')">')
             .append('<input type="button" class="config" value="Load" onclick="javascript:loadConfig('+index+')">')
             .append('<input type="button" class="config" value="Delete" onclick="javascript:deleteConfig('+index+')">');
           $('ul').append(newItem);
         });
       }
-      $('ul').append($('<li>').append('<input type="button" value="Close" onclick="javascript:closeList()">'));
+      let lastRow = $('<li>');
+      lastRow.append('<input type="button" style="width:50%" value="Close" onclick="javascript:closeList()">');
+      lastRow.append('<input type="button" style="width:50%" value="Upload" onclick="javascript:uploadConfig()">');
+      lastRow.append($('<form id="uploadForm" action="uploadConfig" method="post" enctype="multipart/form-data">').html('<input id="configLocation" style="display:none" type="file" name="importConfig" accept=".js">').change(function(evt){
+        let file = evt.target.files[0];
+
+        let mayorVersion = file.name.match(/V[0-9\.]+\.js$/);
+        if (!mayorVersion){
+          alert('Config does not have a valid name');
+          return;
+        }
+        mayorVersion = mayorVersion[0].slice(1,-3).split('.')[0];
+        let currentMayorVersion = config.version.split('.')[0];
+        if(mayorVersion !== currentMayorVersion){
+          alert('Version of new config does not match the current one');
+          return;
+        }
+
+        $('#uploadForm').submit();
+      })); 
+
+      $('ul').append(lastRow);
     });
 
     socket.on('config', function(newConfig){
